[package]
name = "ash_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
ash_server = { path = "../ash_server" }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

log = { workspace = true }
fern = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
