[package]
name = "ash_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash_server = { path = "../ash_server" }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

log = { workspace = true }
fern = { workspace = true }
chrono = { workspace = true }

clap = { version = "4.4.10", features = ["derive"] }

[lints]
workspace = true
