[package]
name = "ash_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
# ash_gap_buffer = { path = "../ash_gap_buffer" }
ash_term = { path = "../ash_term" }
backtrace = "0.3.69"
chrono = "0.4.31"
color-backtrace = "0.6.1"

# fixed a bug that was causing issues for me
crop = { git = "https://github.com/SamuelMcGowan/crop", features = [
    "graphemes",
] }

fern = "0.6.2"
log = { workspace = true }
unicode-width = "0.1.11"
unicode-segmentation = "1.10.1"

[lints]
workspace = true
