[package]
name = "ash_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
# ash_gap_buffer = { path = "../ash_gap_buffer" }
ash_term = { path = "../ash_term" }
backtrace = "0.3.69"
chrono = { workspace = true }
color-backtrace = "0.6.1"

crop = { version = "0.4.1", features = ["graphemes"] }

fern = { workspace = true }
log = { workspace = true }
unicode-width = "0.1.11"
unicode-segmentation = "1.10.1"
maplit = "1.0.2"

[lints]
workspace = true
