[package]
name = "ash_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
ash_term = { path = "../ash_term" }
crop = { version = "0.4.1", features = ["graphemes"] }
unicode-width = "0.1.11"
unicode-segmentation = "1.10.1"

backtrace = "0.3.69"
chrono = { workspace = true }
clap = { version = "4.5.7", features = ["derive"] }
color-backtrace = "0.6.1"
fern = { workspace = true }
log = { workspace = true }
maplit = "1.0.2"

[lints]
workspace = true
