[package]
name = "ash_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash_core = { path = "../ash_core" }

anyhow = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

log = { workspace = true }
fern = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
